--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,8 @@ IF(UNIX)
   SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g  -Wall -Wextra -Wunused-variable -DDEBUG -D_DEBUG")
 ENDIF(UNIX)
 
-if(OPENMP_FOUND)
+OPTION(USE_OPENMP "Use OpenMP for multithreading support" ON)
+if(USE_OPENMP AND OPENMP_FOUND)
   MESSAGE("OpenMP found")
   if(UNIX)
     SET(CMAKE_C_FLAGS_RELEASE "-O3  -Wall -Wextra -Wunused-variable  -g -fPIC -msse2 -msse3 -msse4 -ffast-math")
@@ -22,13 +23,13 @@ if(OPENMP_FOUND)
   endif(UNIX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-  else(OPENMP_FOUND)
+  else(USE_OPENMP AND OPENMP_FOUND)
     MESSAGE("OpenMP not found")
     if(UNIX)
       SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -Wno-unknown-pragmas -Wunused-variable -g -fPIC -msse2 -msse3 -msse4 -ffast-math")
       SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -Wno-unknown-pragmas -Wunused-variable -g -fPIC -msse2 -msse3 -msse4 -ffast-math")
     endif(UNIX)
-endif(OPENMP_FOUND)
+endif(USE_OPENMP AND OPENMP_FOUND)
 
 # ============================================================================ #
 # Create projects
